package net.mcnimoses.daisukeearth.util.local;

public interface Local{}
